@@ -2,6 +2,8 @@
 
 HEAD
 ====
+Fixes:
+- Added missing __cplusplus guards to libHX/io.h
 Changes:
 - For filesystem/filehandle-related functions, io.h should now be included
   in userspace programs instead of misc.h
